--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  overflow-x: hidden;
 }
 
 code {
@@ -69,23 +69,23 @@ select:hover {
 }
 
 .header{
-  background-image: url("https://i.pinimg.com/736x/20/67/3a/20673ab1055e507b51d990d3e62ffb3a.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   width: 100vw;
   height: 50vh;
-  z-index: -1;
+  background-color: #032541cc;
 }
 
 .opac{
-  background-color: #032541 !important;
-  z-index: 1;
+  width: 100%;
+  height: 50vh;
+  background-image: url("https://a-static.besthdwallpaper.com/captain-marvel-join-the-avengers-team-wallpaper-800x480-25773_12.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .header_opac{
-  z-index: 3;
-  opacity: 1;
+  width: 100%;
+  height: 100%  ;
 }
 
 label {
@@ -112,4 +112,64 @@ label {
 
 .buttons{
   border-radius: 20px;
+  cursor: pointer;
 }
+
+.buttons1{
+  border-radius: 20px;
+  cursor: pointer;
+}
+.buttons3 , .buttons4{
+  cursor: pointer;
+}
+
+.luboy{
+  border-radius: 20px;
+  background-color: #032541;
+  color: #42BE9F;
+  padding: 5px 20px;
+  margin-left: -15px;
+}
+.luboy1{
+  border-radius: 20px;
+  background-color: #032541;
+  color: #42BE9F;
+  padding: 5px 20px;
+  margin-right: -15px;
+}
+
+.carusel1{
+  position: relative;
+}
+
+.positsiya {
+  content: '';
+  position: absolute;
+  bottom: 30%;
+  left: 10%;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background-color: #032541;
+  color: white;
+
+}
+
+.sup {
+  font-size: 8px;
+  top: -1em !important;
+  right: 4px !important;
+}
+
+.line {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  border: 3px solid green;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+}
+
+
