--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,12 @@ nav {
 
 .nav-item a {
   margin: 0 0.5rem;
-  color:  white !important;
+  color:  white;
   font-weight: 600;
+  text-decoration: none;
+  list-style: none;
+  font-weight: 400;
+  cursor: pointer;
 }
 
 .nav-item ul {
@@ -140,6 +144,7 @@ label {
 
 .carusel1{
   position: relative;
+  cursor: pointer;
 }
 
 .positsiya {
@@ -152,7 +157,57 @@ label {
   border-radius: 50%;
   background-color: #032541;
   color: white;
+}
 
+.more {
+  content: '';
+  position: absolute;
+  bottom: 470%;
+  left: 225%;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.527);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 0 10px 0;
+  color: black;
+  cursor: pointer;
+}
+
+.more_card {
+  content: '';
+  position: absolute;
+  bottom: 330%;
+  left: 100%;
+  width: 110px;
+  height: 70px;
+  background-color: rgb(255, 254, 254);
+  color: rgb(102, 101, 101);
+  z-index: 9999;
+  border-radius: 10px;
+  display: none;
+}
+.more:hover + .more_card  {
+  display: block;
+}
+.more_card:hover{
+  display: block;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.pointer:hover {
+  background-color: #032541;
+  color: white;
+}
+
+more:hover .more_card {
+  display: block;
 }
 
 .sup {
@@ -173,3 +228,11 @@ label {
 }
 
 
+.links {
+  text-decoration: none;
+  color: black !;
+}
+
+.my_card {
+  height: 340px;
+}
