--- a/src/index.css
+++ b/src/index.css
@@ -236,3 +236,9 @@ more:hover .more_card {
 .my_card {
   height: 340px;
 }
+
+.cardd {
+  display: flex;
+  height: 10rem;
+  text-align: center;
+}
